--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://quickprint.io/"
+baseURL = "https://www.quickprint.io/"
 languageCode = "en-us"
 title = "QuickPrint.IO"
 theme = "beautifulhugo"
