--- a/config.toml
+++ b/config.toml
@@ -12,10 +12,10 @@ logo = "logo.png"
 [Author]
   name = "Caio dos Santos Cotts Quintão"
   email = "site@quickprint.io"
-  facebook = "quickprinto.io"
-  snapchat = "quickprint.io"
-  instagram = "quickprint.io"
-  3dhubs = "quickprint.io"
+  facebook = "quickprint.io"
+#   snapchat = "quickprint.io"
+#   instagram = "quickprint.io"
+#   3dhubs = "quickprint.io"
 
 [[menu.main]]
     name = "About"
