Minor spell check

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ logo = "logo.png"
 
 [Author]
   name = "Caio dos Santos Cotts Quintão"
-  email = "site@quickprint.io"
+  email = "order@quickprint.io"
   facebook = "quickprint.io"
 #   snapchat = "quickprint.io"
 #   instagram = "quickprint.io"
